Fixes layout issues on contact pages

--- a/src/components/Avatar.module.css
+++ b/src/components/Avatar.module.css
@@ -10,6 +10,6 @@
   display: block;
   height: auto;  
   position: absolute;
-  right: 22%;
+  right: 18%;
   bottom: 0%;
 }
